force-app/main/default/objects/AA_Appointment__c/AA_Appointment__c.object-meta.xml
<CustomObject>
    <label>AA Appointment</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>AA Appointment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AA Appointment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>