force-app/main/default/objects/AA_Appointment__c/fields/Book_Confirmation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Book_Confirmation_Sent_Date__c</fullName>
    <description>Date when the book confirmation was sent manually or automatically via WhatsApp</description>
    <inlineHelpText>Date when the book confirmation was sent manually or automatically via WhatsApp</inlineHelpText>
    <label>Book Confirmation Sent Date</label>
    <type>DateTime</type>
</CustomField>