force-app/main/default/objects/AA_Appointment__c/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <formula>Service__r.Business_Branch__r.Business__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Id</label>
    <type>Text</type>
</CustomField>