force-app/main/default/objects/AA_Appointment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>AA_Customer__c</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointment</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>