force-app/main/default/objects/AA_Appointment__c/fields/Customer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comments__c</fullName>
    <description>Comments by the customer during the appointment creation</description>
    <inlineHelpText>Comments by the customer during the appointment creation</inlineHelpText>
    <label>Customer Comments</label>
    <type>TextArea</type>
</CustomField>