force-app/main/default/objects/AA_Appointment__c/fields/Customer_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Confirmation_Date__c</fullName>
    <label>Customer Confirmation Date</label>
    <type>DateTime</type>
</CustomField>