force-app/main/default/objects/AA_Appointment__c/fields/Done_Date__c.field-meta.xml
<CustomField>
    <fullName>Done_Date__c</fullName>
    <description>Date when the appointment is completed and the work is done</description>
    <inlineHelpText>Date when the appointment is completed and the work is done</inlineHelpText>
    <label>Done Date</label>
    <type>DateTime</type>
</CustomField>