force-app/main/default/objects/AA_Appointment__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>AA_Employee__c</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>