force-app/main/default/objects/AA_Appointment__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Internal comment for this appointment that is written by the employee</description>
    <inlineHelpText>Internal comment for this appointment that is written by the employee</inlineHelpText>
    <label>Internal Comments</label>
    <type>TextArea</type>
</CustomField>