force-app/main/default/objects/AA_Appointment__c/fields/Is_Book_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Book_Confirmation_Sent__c</fullName>
    <formula>NOT(ISBLANK( Book_Confirmation_Sent_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Book Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>