force-app/main/default/objects/AA_Appointment__c/fields/Is_Customer_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Confirmed__c</fullName>
    <formula>NOT(ISBLANK(Customer_Confirmation_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Customer Confirmed</label>
    <type>Checkbox</type>
</CustomField>