force-app/main/default/objects/AA_Appointment__c/fields/Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid__c</fullName>
    <formula>NOT( ISBLANK( Payment_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>