force-app/main/default/objects/AA_Appointment__c/fields/Is_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Pending__c</fullName>
    <formula>ISPICKVAL(Status__c, &quot;Done&quot;) &amp;&amp; NOT(Is_Paid__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Payment Pending</label>
    <type>Checkbox</type>
</CustomField>