force-app/main/default/objects/AA_Appointment__c/fields/Is_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Reminder_Sent__c</fullName>
    <formula>NOT(ISBLANK(Reminder_Sent_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>