force-app/main/default/objects/AA_Appointment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Most of the time it will be the service&apos;s amount but sometimes there are some extra fees that the customer has to pay for extra work. This value represents the amount paid by the customer</description>
    <inlineHelpText>Most of the time it will be the service&apos;s amount but sometimes there are some extra fees that the customer has to pay for extra work. This value represents the amount paid by the customer</inlineHelpText>
    <label>Payment Amount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>