force-app/main/default/objects/AA_Appointment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <description>The day when the customer paid for the service. it can be today or within a week</description>
    <inlineHelpText>The day when the customer paid for the service. it can be today or within a week</inlineHelpText>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>