force-app/main/default/objects/AA_Appointment__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Mercado Pago</fullName>
            </value>
            <value>
                <fullName>Decido en el Momento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>