force-app/main/default/objects/AA_Appointment__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>AA_Service__c</referenceTo>
    <relationshipLabel>Appointment</relationshipLabel>
    <relationshipName>Appointment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>