force-app/main/default/objects/AA_Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Customer__c</columns>
    <columns>Service__c</columns>
    <columns>Employee__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>