force-app/main/default/objects/AA_Appointment__c/listViews/Silvina_Unas.listView-meta.xml
<ListView>
    <fullName>Silvina_Unas</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Employee__c</columns>
    <columns>Service__c</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Name__c</field>
        <operation>contains</operation>
        <value>Silvina</value>
    </filters>
    <label>Silvina Uñas</label>
</ListView>