force-app/main/default/objects/AA_Appointment__c/listViews/Zentidos_Last_Month.listView-meta.xml
<ListView>
    <fullName>Zentidos_Last_Month</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Service__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branch_Name__c</field>
        <operation>equals</operation>
        <value>Zentidos</value>
    </filters>
    <label>Zentidos Last Month</label>
</ListView>